better UI and some options for adding and viewing

--- a/spellbookGenerator/css/style.css
+++ b/spellbookGenerator/css/style.css
@@ -8,6 +8,10 @@ body {
     box-sizing: border-box
 }
 
+#main-wrapper {
+    padding: 0;
+}
+
 .full-width {
     width: 100%;
 }
@@ -24,3 +28,4 @@ body {
 .no-flex-shrink {
     flex-shrink: 0;
 }
+
